trunk/Archive2/ea/6bd617d421a8b8/output
main.cpp: In function 'int main()':
main.cpp:20:7: error: request for member 'a' in 'b', which is of non-class type 'B(A (*)())'
     b.a;
       ^
